# fxsplit

./: Dockerfile  README.md
.github/workflows/: ci.yml  publish-ghcr.yml
assets/nextflow/fxsplit/: main.nf
fxsplit/: Cargo.toml
fxsplit/.github/workflows/: publish-ghcr.yml
fxsplit/src/: cli.rs  lib.rs  main.rs
fxsplit/tests/: smoke_2bit.rs  smoke_fasta.rs  smoke_fasta_gz.rs  smoke_fastq.rs  smoke_fastq_gz.rs  smoke_masking.rs  smoke_stdin.rs
fxsplit/tests/common/: mod.rs
