[package]
name = "fxsplit"
description = "split FASTX into N chunks/files/headers"
version = "0.0.3"
keywords = ["split", "fasta", "fastq", "io"]
readme = "../README.md"
homepage = "https://github.com/alejandrogzi/isotools"
repository = "https://github.com/alejandrogzi/isotools"
categories = ["command-line-utilities", "science"]
authors = ["alejandrogzi <alejandrxgzi@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "^4.0", features = ["derive"] }
rayon = "1.8.1"
num_cpus = "1.16.0"
anyhow = "1.0.81"
log = "0.4.14"
simple_logger = "5.0.0"
memchr = "2.7.4"
memmap2 = "0.9.4"
flate2 = "1.0.20"
twobit = "0.2.1"

[dev-dependencies]
tempfile = "3.12.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
